--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>
-    Contact Page
-</h1>
+
+<bodY>
+    <h1>Contact Form</h1>
+
+    <form action="" method="POST" >
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit"/>
+    </form>
+</bodY>
+
 
 {% endblock %}
